# SenseCAP_Indicator_IoTex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  config.c  config.h  main.c  view_data.h
main/comm/: ws_mqtt.c  ws_mqtt.h
main/controller/: indicator_controller.c  indicator_controller.h
main/model/: app_iotex_data.c  app_iotex_data.h  app_mqtt_iotex.c  app_mqtt_iotex.h  indicator_btn.c  indicator_city.c  indicator_cmd.c  indicator_cmd.h  indicator_display.c  indicator_display.h  indicator_iotex.c  indicator_model.c  indicator_model.h  indicator_mqtt.c  indicator_mqtt.h  indicator_sensor.c  indicator_sensor.h  indicator_storage.c  indicator_storage.h  indicator_time.c  indicator_wifi.c  iotex_event.h  model_data.c  model_data.h
main/model/comm/: ws_mqtt.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
main/ui/images/: ui_img_1870666550.c  ui_img_high_light_png.c  ui_img_location2_png.c  ui_img_location_png.c  ui_img_lock_png.c  ui_img_setting_png.c  ui_img_temp_2_png.c  ui_img_time_png.c  ui_img_tvoc_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_disconet_png.c
main/ui/screens/: ui_screen_binding.c  ui_screen_display.c  (+4 more)
main/upload/: upload_data.c  upload_data.h
main/util/: indicator_util.h
main/view/: extra_vew_display.c  extra_view_display.h  extra_view_iotex.c  extra_view_iotex.h  extra_view_sensor.c  extra_view_sensor.h  extra_view_time.c  extra_view_time.h  indicator_view.c  indicator_view.h  iotex_view.c  iotex_view.h  view_data.h
(+60 files in other folders)
